--- a/index.html
+++ b/index.html
@@ -248,13 +248,13 @@
     </tr>
     <tr>
       <td>アップグレード</td>
-      <td></td>
+      <td>けんくん</td>
       <td></td>
     </tr>
     <tr>
       <td>ゲーム終了</td>
-      <td></td>
-      <td></td>
+      <td>けんくん</td>
+      <td>〇</td>
     </tr>
     <tr>
       <td>ゲーム開始</td>
@@ -263,8 +263,8 @@
     </tr>
     <tr>
       <td>チーム分け</td>
-      <td></td>
-      <td></td>
+      <td>けんくん</td>
+      <td>〇</td>
     </tr>
   </table>
 
