--- a/index.html
+++ b/index.html
@@ -218,13 +218,13 @@
     </tr>
     <tr>
       <td>ショップ</td>
-      <td>プリン</td>
+      <td>プリン→けんくん</td>
       <td></td>
     </tr>
     <tr>
       <td>死亡検知</td>
-      <td></td>
-      <td></td>
+      <td>とも</td>
+      <td>〇</td>
     </tr>
     <tr>
       <td>じぇね</td>
@@ -233,13 +233,13 @@
     </tr>
     <tr>
       <td>奈落</td>
-      <td>マイクラすきやで</td>
+      <td>マイクラすきやで→プリン</td>
       <td></td>
     </tr>
     <tr>
       <td>ベッド</td>
-      <td>ぬし</td>
-      <td></td>
+      <td>ぬし,とも</td>
+      <td>〇</td>
     </tr>
     <tr>
       <td>ランキング</td>
@@ -258,7 +258,7 @@
     </tr>
     <tr>
       <td>ゲーム開始</td>
-      <td>たけぴー</td>
+      <td>たけぴー,けんくん</td>
       <td>〇</td>
     </tr>
     <tr>
