--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
     <tr>
       <td>ショップ</td>
       <td>プリン→けんくん</td>
-      <td></td>
+      <td>〇</td>
     </tr>
     <tr>
       <td>死亡検知</td>
@@ -233,8 +233,8 @@
     </tr>
     <tr>
       <td>奈落</td>
-      <td>マイクラすきやで→プリン</td>
-      <td></td>
+      <td>マイクラすきやで→プリン→とも</td>
+      <td>〇</td>
     </tr>
     <tr>
       <td>ベッド</td>
@@ -242,14 +242,9 @@
       <td>〇</td>
     </tr>
     <tr>
-      <td>ランキング</td>
-      <td></td>
-      <td></td>
-    </tr>
-    <tr>
       <td>アップグレード</td>
       <td>けんくん</td>
-      <td></td>
+      <td>〇</td>
     </tr>
     <tr>
       <td>ゲーム終了</td>
